modified test connect4